--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         const userInput = document.getElementById('userInput');
         const apiKeyPlaceholder = document.getElementById('apiKeyPlaceholder');
 
-        const API_KEY = "AIzaSyAP3d3CImySJbCqtUx0LPEp0C7B8IjAIBI";
+        const API_KEY = " ";
 
         function appendMessage(sender, message) {
             // message 변수에 마크다운 텍스트가 있다고 가정합니다.
